add google maps link

--- a/index.html
+++ b/index.html
@@ -89,23 +89,41 @@
                 padding: 1.5rem;
             }
         }
+
+        .location-link {
+            text-align: center;
+            font-size: 1.25rem;
+            color: #666;
+            margin-bottom: 0.5rem;
+        }
+
+        .location-link a {
+            color: #2563eb;
+            text-decoration: none;
+            transition: color 0.3s ease;
+        }
+
+        .location-link a:hover {
+            color: #1d4ed8;
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
     <div class="container">
         <div class="card">
             <img src="/assets/survivor_logo.png" alt="Survivor Event" class="event-image">
-            <div class="date">    
-                Lake Merwin, Washington
-                <br>
-                September 6-8, 2025
-            </div>
-            <div class="date">
+            <div class="location-link">
+                <p><a href="https://maps.app.goo.gl/1x8Vcsw9dge6E4BS7" target="_blank">Cresap Bay Campground</a></p>
             </div>
 
+            <div class="date">    
+                <p>Lake Merwin, Washington</p>
+                <p>September 6-8, 2025</p>
+            </div>
 
             <p class="description">
-                We're so excited to be putting on this special weekend to celebrate Quinn's 30th birthday, we hope you can all make it out!
+                We're so excited for this special weekend to celebrate Quinn's 30th birthday, we hope you can all make it out!
             </p>
             
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSfzAIaagQCi0p0PBTwBJn1luVEwzTG13nTK6XnsIF0R-5i_bQ/viewform?usp=dialog" class="rsvp-button">
